--- a/kaguya/templates/_homeReview.html
+++ b/kaguya/templates/_homeReview.html
@@ -4,20 +4,19 @@
 <li class="list-group-item">
   <h6 class="media-heading">
     <p>
-      <img src="http://placehold.it/50x50" style="float:left; width:auto; height:4vh; margin-right:10px; border-radius:50%">
-      Username
+      <img src="{{ url_for('static', filename='profile_pics/' + review.user.image_file) }}" style="float:left; width:auto; height:4vh; margin-right:10px; border-radius:50%">
+      {{ review.user.username }}
       <br>
       <small>
-          reviewed <a href="#">Anime Title</a>
+        reviewed <a href="#">{{ review.anime.title }}</a>
       </small>
     </p>
   </h6>
   <div class="overflow">
     <p>
-      <img src="https://cdn.myanimelist.net/images/anime/13/17405.jpg" style="float:left; width:auto; height:7vh; margin-right:15px;">
-      Vivamus pulvinar mauris eu placerat blandit. In euismod tellus vel ex vestibulum congue cerat blandit.
-      In euismod tellus vel ex vestibulum conguecerat blandit. In euismod tellus vel ex vestibulum conguecer
-      at blandit. In euismod tellus vel ex vestibulum conguecerat blandit. In euismod tellus vel.
+<!--      <img src="https://cdn.myanimelist.net/images/anime/13/17405.jpg" style="float:left; width:auto; height:7vh; margin-right:15px;">-->
+      <img src="{{ review.anime.image_file }}" style="float:left; width:auto; height:7vh; margin-right:15px;">
+      {{ review.content }}
     </p>
   </div>
 </li>
