--- a/kaguya/templates/anime.html
+++ b/kaguya/templates/anime.html
@@ -1,7 +1,9 @@
 <head>
     <!-- Anime Page CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='anime.css') }}">
+
 </head>
+
 
 {% extends "base.html" %}
 
@@ -83,37 +85,46 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-10 text-right">
                     <!-- STATUS - Dropdown button -->
-                    <div class="btn-group dropdown">
-                        <button type="button" class="btn btn-info btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Displayed Status
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Watching</a>
-                            <a class="dropdown-item active" href="#">Completed</a>
-                            <a class="dropdown-item" href="#">On Hold</a>
-                            <a class="dropdown-item" href="#">Dropped</a>
-                            <a class="dropdown-item" href="#">Plan to Watch</a>
+                    <div class="btn-group dropdown" id="statusGroup">
+                        <div class="input-group" id="statusInput">
+                            <div class="input-group-btn" id="status">
+                                <button type="button" class="btn btn-outline-info btn-sm dropdown-toggle-status" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fa fa-flag" aria-hidden="true"></i> Displayed Status <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </button>
+                                <div class="dropdown-menu " id="status" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item status-btn" href="#"><i class="fa fa-eye" aria-hidden="true"></i> Watching</a>
+                                    <a class="dropdown-item status-btn" href="#"><i class="fa fa-check" aria-hidden="true"></i> Completed</a>
+                                    <a class="dropdown-item status-btn" href="#"><i class="fa fa-pause" aria-hidden="true"></i> On Hold</a>
+                                    <a class="dropdown-item status-btn" href="#"><i class="fa fa-ban" aria-hidden="true"></i> Dropped</a>
+                                    <a class="dropdown-item status-btn" href="#"><i class="fa fa-bookmark" aria-hidden="true"></i> Plan to Watch</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- USER RATING - Dropdown button -->
                     <div class="btn-group dropdown">
-                        <button type="button" class="btn btn-warning btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            ⭐ Rating
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">10</a>
-                            <a class="dropdown-item" href="#">9</a>
-                            <a class="dropdown-item active" href="#">8</a>
-                            <a class="dropdown-item" href="#">7</a>
-                            <a class="dropdown-item" href="#">6</a>
-                            <a class="dropdown-item" href="#">5</a>
-                            <a class="dropdown-item" href="#">4</a>
-                            <a class="dropdown-item" href="#">3</a>
-                            <a class="dropdown-item" href="#">2</a>
-                            <a class="dropdown-item" href="#">1</a>
+                        <div class="input-group">
+                            <div class="input-group-btn">
+                                <button type="button" class="btn btn-outline-warning btn-sm text-dark dropdown-toggle-rating" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fa fa-star" aria-hidden="true"></i> Rating <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                </button>
+                                <div class="dropdown-menu " id="rating" aria-labelledby="dropdownMenuButton2">
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 10</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 9</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 8</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 7</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 6</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 5</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 4</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 3</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 2</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 1</a>
+                                    <a class="dropdown-item rate-btn" href="#"><i class="fa fa-star" aria-hidden="true"></i> 0</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-danger"><i class="fa fa-heart"> Favorite</i></button>
+                    <button type="submit" class="btn btn-outline-danger"><i class="fa fa-heart"> Favorite</i></button>
                 </div>
             </div>
 
@@ -150,25 +161,27 @@
             </div>
             {% endif %}
 
-
             <h5 style="padding-top: 25px">Synopsis</h5>
             <p>{{ anime.synopsis }}</p>
             <hr>
 
             {% if current_user.is_authenticated %}
+            {% if form %}
             <!-- Comments Form -->
             <div class="card my-4">
                 <h6 class="card-header">Leave a Review</h6>
                 <div class="card-body">
-                    <form>
+                    <form action="" method="post">
+                        {{ form.hidden_tag() }}
                         <div class="form-group">
-                          <textarea class="form-control" rows="3"></textarea>
+                          {{ form.review(class="form-control", rows="3") }}
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        {{ form.submit(type="submit", class="btn btn-primary") }}
                     </form>
                 </div>
             </div>
             <hr>
+            {% endif %}
             {% endif %}
 
             <h5 style="padding-top: 15px;" class="pb-4">User Reviews</h5>
